place static obstacles on level

--- a/src/DeckScalerRTS/.vscode/settings.json
+++ b/src/DeckScalerRTS/.vscode/settings.json
@@ -56,5 +56,6 @@
         "temp/": true,
         "Temp/": true
     },
-    "dotnet.defaultSolution": "DeckScalerRTS.sln"
+    "dotnet.defaultSolution": "DeckScalerRTS.sln",
+    "dotnet.preferCSharpExtension": true
 }
